.metadata/.plugins/org.eclipse.cdt.ui/test_case.build.log
18:05:11 **** Incremental Build of configuration Debug for project test_case ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/file_manager.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/file_manager.d" -MT"Core/Src/file_manager.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/file_manager.o"
arm-none-eabi-gcc "../Core/Src/refill_function.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/refill_function.d" -MT"Core/Src/refill_function.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/refill_function.o"
../Core/Src/refill_function.c: In function 'refillDrawer':
../Core/Src/refill_function.c:40:15: error: 'pressFlag' undeclared (first use in this function)
   40 |         while(pressFlag){
      |               ^~~~~~~~~
../Core/Src/refill_function.c:40:15: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:64: Core/Src/refill_function.o] Error 1
make: *** Waiting for unfinished jobs....
"make -j16 all" terminated with exit code 2. Build might be incomplete.

18:05:11 Build Failed. 3 errors, 0 warnings. (took 565ms)

